feat: add functionality to update meeting participant status and fetch notification by ID